<resources>
    <string name="easily_get_ecmobile">各种商品应有尽有</string>
    <string name="app_name">懒豆商城</string>
    <string name="excellent_parter">为您省去更多的时间方便您的生活</string>
    <string name="excellent_service">物流跟踪随时掌握</string>
    <string name="unify_response">为您省去更多的时间，方便您的生活</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="ecmobile_design_introduction">汲取最新设计灵感，基于人性化体验理念，多年客户端经验团队打造，更适合当下用户的界面设计和操作流程，不受时间空间限制，给客户以畅快、舒适的购物体验，专享快节奏的移动生活</string>
    <string name="show">显示菜单</string>
    <string name="smooth_operation_experience">更便捷、流畅的操作体验</string>
    <string name="share">分享 demo</string>
    <string name="paid_time">2014-10-29 15:06:15</string>
    <string name="register_name_digits">._0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLIMNOPQRSTUVWXYZ</string>
    <string name="body_weight_setting_title">Enter your body weight</string>
    <string name="kilograms">kilograms</string>
    <string name="unify_service">线上支付方便快捷</string>
    <string name="pounds">pounds</string>
    <string name="centimeters">centimeters</string>
    <string name="step_length_setting_title">Enter your step length</string>
    <string name="inches">inches</string>
    <string name="no_need_to_change_code">懒豆商城满足您所有的需求</string>
    <string name="two_main_os">两大主流操作系统</string>
    <string name="special_app_for_cellphone">专属手机客户端，适用于目前世界上使用最为广泛的iOS和Android两大操作系统</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_last_time">最后更新时间：</string>
    <string name="xlistview_header_hint_ready">释放刷新</string>
    <string name="xlistview_header_hint_loading">正在加载…</string>
    <string name="qfish_introduction">Love coding and hand-drawing, while he is also skilled in HTML and CSS and JS.
        What he always saying is "Fight, a way of surviving ~".</string>
    <string name="title_activity_e0__profile_fragment">E0_ProfileFragment</string>
    <string name="lifecycle_all">所有</string>
    <string name="lifecycle_visible">可见</string>
    <string name="lifecycle_frontdeskoperation">前台运行</string>
    <string name="address_consignee">收货人姓名（必填）</string>
    <string name="address_tel">手机号码（必填）</string>
    <string name="address_email">Email(必填)</string>
    <string name="address_phone">手机号码（必填）</string>
    <string name="address_zip">邮政编码</string>
    <string name="address_area">所在地区</string>
    <string name="address_address">详细地址（必填）</string>
    <string name="address_add">确定</string>
    <string name="select_address">选择地址</string>
    <string name="addressb_country">选择国家</string>
    <string name="manage_address">收货地址管理</string>
    <string name="manage2_over">完成</string>
    <string name="manage2_name">收货人姓名</string>
    <string name="manage2_tel">电话号码</string>
    <string name="manage2_email">Email</string>
    <string name="manage2_phone">手机号码</string>
    <string name="manage2_address">详细地址</string>
    <string name="manage2_set">设为默认</string>
    <string name="manage2_delete">删除地址</string>
    <string name="modify_address">修改收货地址</string>
    <string name="balance_receiver">收件人</string>
    <string name="balance_address">收件地址</string>
    <string name="balance_pay">支付方式</string>
    <string name="balance_shipping">配送方式</string>
    <string name="balance_bill">发票信息</string>
    <string name="balance_list">商品清单</string>
    <string name="balance_redpocket">红包</string>
    <string name="balance_exp">积分</string>
    <string name="balance_detail">订单明细</string>
    <string name="balance_transportation">运输费</string>
    <string name="balance_rental">总额：</string>
    <string name="balance_submit">提交订单</string>
    <string name="balance_cancel">取消订单</string>
    <string name="bill_save">保存</string>
    <string name="bill_office">办公用品</string>
    <string name="bill_food">食品</string>
    <string name="bill_commodity">日用品</string>
    <string name="bill_title">发票抬头</string>
    <string name="collect_myfavorite">我的收藏</string>
    <string name="collect_done">完成</string>
    <string name="collect_compile">编辑</string>
    <string name="debughome_log">协议log</string>
    <string name="debughome_activity">activity周期</string>
    <string name="debughome_crashlog">crash log</string>
    <string name="debughome_floatingwindow">浮窗设置</string>
    <string name="dialog_title">title</string>
    <string name="dialog_message">message</string>
    <string name="dialog_ensure">确定</string>
    <string name="dialog_cancel">取消</string>
    <string name="express_logistics">物流信息</string>
    <string name="floatView_floatingwindowopen">开启悬浮窗</string>
    <string name="floatView_floatingwindowclose">关闭悬浮窗</string>
    <string name="floatView_3g">模拟3G网络</string>
    <string name="floatView_cancel3g">取消模拟3G网络</string>
    <string name="floatView_2g">模拟2G网络</string>
    <string name="floatView_cancel2g">取消模拟2G网络</string>
    <string name="gooddetail_parameter">基本参数</string>
    <string name="gooddetail_product">商品详情</string>
    <string name="gooddetail_desc">商品描述</string>
    <string name="gooddetail_commit">商品评论</string>
    <string name="gooddetail_buy">立即购买</string>
    <string name="gooddetail_shoppingcart">加入购物车</string>
    <string name="hotselling_recommend">特价</string>
    <string name="score_creditsexchange">积分兑换</string>
    <string name="score_submit">提交</string>
    <string name="login_account">账户</string>
    <string name="login_login">登录</string>
    <string name="login_username">请输入用户名</string>
    <string name="login_password">密码不能少于8位</string>
    <string name="login_register">没有账号？免费注册</string>
    <string name="profile_personal">会员中心</string>
    <string name="profile_obligation">待付款</string>
    <string name="profile_readyforshipment">待发货</string>
    <string name="profile_forthegoods">待收货</string>
    <string name="profile_history">历史订单</string>
    <string name="profile_message">商城通知</string>
    <string name="redpaper_input">选择红包</string>
    <string name="register_regist">注册</string>
    <string name="register_email">邮箱地址</string>
    <string name="register_confirm">确认密码</string>
    <string name="search_input">请输入搜索关键字</string>
    <string name="setting_picture">图片显示</string>
    <string name="setting_smartmode">智能模式</string>
    <string name="setting_hqpicture">高质量（适合WiFi环境）</string>
    <string name="setting_normal">低质量（适合2G或3G环境）</string>
    <string name="setting_official">官方信息</string>
    <string name="setting_service">官方客服</string>
    <string name="setting_website">官方网站</string>
    <string name="setting_tech">版权声明</string>
    <string name="setting_rate">应用评分</string>
    <string name="setting_geekzoo">关于Geek Zoo</string>
    <string name="setting_about">关于应用</string>
    <string name="setting_logout">注销</string>
    <string name="share_share">分享</string>
    <string name="share_sina">分享到新浪微博</string>
    <string name="share_tencent">分享到腾讯微博</string>
    <string name="shopcar_shopcar">购物车</string>
    <string name="shopcar_nothing">购物车还没有商品</string>
    <string name="shopcar_add">赶紧去逛逛吧！加一些商品~</string>
    <string name="shopcarfooter_total">总计：</string>
    <string name="shopcarfooter_settleaccounts">结算</string>
    <string name="shopcarhead_ecm">ECMobile</string>
    <string name="shopcaritem_done">完成</string>
    <string name="shopcaritem_modification">修改</string>
    <string name="shopcaritem_remove">移除商品</string>
    <string name="topview_message">通知</string>
    <string name="tradeitem_number">订单编号</string>
    <string name="tradeitem_time">成交时间</string>
    <string name="tradeitem_rental">总额</string>
    <string name="tradeitem_logistics">查看物流</string>
    <string name="tradeitem_receive">确认收货</string>
    <string name="voiceview_text">说出您要搜索的内容...</string>
    <string name="memorymessagemctivity_motalram">总内存</string>
    <string name="memorymessageactivity_freeram">空闲内存</string>
    <string name="memorymessageactivity_lowram">是否处于低内存状态</string>
    <string name="memorymessageactivity_rate">传输速率</string>
    <string name="memorymessageactivity_id">进程ID</string>
    <string name="memorymessageactivity_uid">进程所在的UID</string>
    <string name="memorymessageactivity_mem">进程占用内存</string>
    <string name="memorymessageactivity_process">进程名</string>
    <string name="life_cycle">activity生存周期</string>
    <string name="exit_again">再按一次退出</string>
    <string name="exit_debug_mode">确认退出debug模式？</string>
    <string name="add_name">请填写姓名</string>
    <string name="add_tel">请填写电话号码</string>
    <string name="add_email">请填写邮箱地址</string>
    <string name="add_correct_email">请填写正确的邮箱地址</string>
    <string name="add_address">请填写详细地址</string>
    <string name="confirm_address">请确认地址信息是否完整</string>
    <string name="select_province">选择省</string>
    <string name="select_city">选择市</string>
    <string name="select_area">选择地区</string>
    <string name="country">国家</string>
    <string name="province">省</string>
    <string name="city">市</string>
    <string name="area">地区</string>
    <string name="can_not_delete">不可以删除默认地址</string>
    <string name="successful_operation">操作成功</string>
    <string name="non_address">您还没有添加收货地址</string>
    <string name="not_support_a_red_envelope">该订单不支持红包</string>
    <string name="browser">浏览器</string>
    <string name="no_favorite">您还没有添加收藏哦，赶快添加吧</string>
    <string name="no_commit">该商品暂无评论</string>
    <string name="deliverStatus">物流状态</string>
    <string name="order_number">订单号：</string>
    <string name="hold_on">请稍候…</string>
    <string name="not_support">暂不支持</string>
    <string name="check_the_network">请检查网络</string>
    <string name="no_login">您还没有登录，请先登录</string>
    <string name="formerprice">促销价格：</string>
    <string name="market_price">市场价格：</string>
    <string name="exemption_from_postage">运费：包邮</string>
    <string name="not_pack_mail">运费：不包邮</string>
    <string name="brstock">库存：</string>
    <string name="store_price">商店价格：</string>
    <string name="enter_score">请输入正确积分</string>
    <string name="score_not_zero">输入积分不能为0</string>
    <string name="all_of_you">您总共有</string>
    <string name="can_use">可使用</string>
    <string name="score">个积分</string>
    <string name="user_name_cannot_be_empty">用户名不能为空</string>
    <string name="password_cannot_be_empty">密码不能为空</string>
    <string name="pay">付款</string>
    <string name="total">总额</string>
    <string name="checkout">结算</string>
    <string name="modify">修改</string>
    <string name="redpaper">请选择红包</string>
    <string name="not_null">（必填*）</string>
    <string name="email_cannot_be_empty">邮箱不能为空</string>
    <string name="required_cannot_be_empty">必填项不能为空</string>
    <string name="fault">邮箱格式错误，请验证</string>
    <string name="password_not_match">密码不一致，请重新输入</string>
    <string name="setting">设置</string>
    <string name="call_or_not">是否拨打</string>
    <string name="exit">退出</string>
    <string name="ensure_exit">确定退出该账户？</string>
    <string name="no_mode_of_distribution">暂时没有配送方式</string>
    <string name="pay_or_not">订单已生成成功，是否马上支付？</string>
    <string name="personal_center">您可以去个人中心查看订单哦</string>
    <string name="understock">库存不足</string>
    <string name="total_price">总价</string>
    <string name="await_pay">待付款订单</string>
    <string name="await_ship">待发货订单</string>
    <string name="shipped">待收货订单</string>
    <string name="no_data">暂无数据</string>
    <string name="check_or_not">是否马上去历史订单查看？</string>
    <string name="use">兑换</string>
    <string name="share_blog">我在河津手机商城上看到一件商品，感觉不错</string>
    <string name="number">数目：</string>
    <string name="crash_log_analysis">崩溃日志分析</string>
    <string name="welcome">欢迎使用</string>
    <string name="no_sdcard">sdcard无效或没有插入!</string>
    <string name="piece">个</string>
    <string name="delivery">您必须选择一个配送方式</string>
    <string name="collected">您已收藏过此商品</string>
    <string name="been_used">用户名或email已使用</string>
    <string name="submit_the_parameter_error">提交参数错误</string>
</resources>