<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="#f5f5f5"
    tools:context="${packageName}.${activityClass}" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <FrameLayout
            android:layout_width="fill_parent"
            android:layout_height="45dp" >

            <View
                android:layout_width="fill_parent"
                android:layout_height="20dp"
                android:background="#000000" />

            <ImageView
                android:layout_width="fill_parent"
                android:layout_height="45dp"
                android:background="@drawable/setting_shadow_title" />

            <ImageView
                android:id="@+id/top_view_back"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="10dp"
                android:padding="5dp"
                android:src="@drawable/icon_back" />

            <TextView
                android:id="@+id/top_view_text"
                android:layout_width="230dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:ellipsize="end"
                android:gravity="center"
                android:singleLine="true"
                android:text="新增地址"
                android:textColor="#fff"
                android:textSize="20sp" />


                        <FrameLayout
                android:id="@+id/add_address_btn"
                android:layout_width="70dp"
                android:layout_height="30dp"
                android:layout_gravity="center_vertical|right"
                android:background="@drawable/e3_add_address_btn" 
                >

                

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|center_horizontal"
                    android:gravity="center_horizontal"
                    android:text="@string/address_add"
                    android:textColor="#ffffff"
                    android:textSize="15dp" />
            </FrameLayout>
        </FrameLayout>
    </LinearLayout>
	<!-- 界面信息 -->
	<ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:background="#ffffff"
                android:orientation="vertical" >

                <EditText
                    android:id="@+id/add_address_name"
                    android:layout_width="fill_parent"
                    android:layout_height="40dp"
                    android:layout_margin="5dp"
                    android:background="#ffffff"
                    android:gravity="center_vertical"
                    android:hint="@string/address_consignee"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:singleLine="true"
                    android:textColor="#000000"
                    android:textSize="16dp" />

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="1.5dp"
                    android:background="#f5f5f5" />

                <EditText
                    android:id="@+id/add_address_telNum"
                    android:layout_width="fill_parent"
                    android:layout_height="40dp"
                    android:layout_margin="5dp"
                    android:background="#ffffff"
                    android:gravity="center_vertical"
                    android:hint="@string/address_tel"
                    android:inputType="number"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:singleLine="true"
                    android:textColor="#000000"
                    android:textSize="16dp" />

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="1.5dp"
                    android:background="#f5f5f5" />

                
                <EditText
                    android:id="@+id/area_name"
                    android:layout_width="fill_parent"
                    android:layout_height="40dp"
                    android:layout_margin="5dp"
                    android:background="#ffffff"
                    android:gravity="center_vertical"
                    android:editable="false"
                    android:paddingRight="10dp"
                    android:paddingLeft="5dp"
                    android:singleLine="true"
                    android:textColor="#000000"
                    android:textSize="16dp" 
                    android:text="山东省 临沂市"/>

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="1.5dp"
                    android:background="#f5f5f5" />

                <LinearLayout
                    android:id="@+id/add_address_area"
                    android:layout_width="fill_parent"
                    android:layout_height="50dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal" >

                    <TextView
                        android:id="@+id/add_address_address"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_weight="1"
                        android:text="@string/address_area"
                        android:textColor="#000000"
                        android:textSize="16dp" />

                    <ImageView
                        android:layout_width="12dp"
                        android:layout_height="12dp"
                        android:layout_marginRight="10dp"
                        android:src="@drawable/accsessory_arrow_right" />
                </LinearLayout>

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="1.5dp"
                    android:background="#f5f5f5" />

                <EditText
                    android:id="@+id/add_address_detail"
                    android:layout_width="fill_parent"
                    android:layout_height="40dp"
                    android:layout_margin="5dp"
                    android:background="#ffffff"
                    android:gravity="center_vertical"
                    android:hint="@string/address_address"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:singleLine="true"
                    android:maxLines="200"
                    android:textColor="#000000"
                    android:textSize="16dp" />
            </LinearLayout>


        </LinearLayout>
    </ScrollView>
</LinearLayout>