<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/body"
    android:orientation="vertical" >

    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="40dp" >

        <View
            android:layout_width="fill_parent"
            android:layout_height="20dp"
            android:background="#000000" />

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:background="@drawable/setting_shadow_title" />

        <ImageView
            android:id="@+id/register_back"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:padding="5dp"
            android:src="@drawable/icon_back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="用户注册"
            android:textColor="#fff"
            android:textSize="20sp" />

        <Button
            android:id="@+id/register_register"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_gravity="center_vertical|right"
            android:layout_marginRight="10dp"
            android:background="#000000"
            android:text="@string/register_regist"
            android:textColor="#ffffff"
            android:textSize="16dp"
            android:visibility="gone" />
    </FrameLayout>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="#f5f5f5" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="20dp"
                android:background="#f5f5f5"
                android:gravity="center_vertical"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/regist_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="注册手机:"
                    android:textSize="16dp" />

                <EditText
                    android:id="@+id/register_name"
                    android:layout_width="fill_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/signin_text_input_bg"
                    android:gravity="center_vertical|center"
                    android:hint="@string/login_username"
                    android:maxLength="20"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:singleLine="true"
                    android:textColor="#000000"
                    android:textSize="16dp" />

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="6dp"
                    android:background="#f5f5f5" />

                <EditText
                    android:id="@+id/register_email"
                    android:layout_width="fill_parent"
                    android:layout_height="40dp"
                    android:background="@drawable/signin_text_input_bg"
                    android:gravity="center_vertical|center"
                    android:hint="@string/register_email"
                    android:inputType="textEmailAddress"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:singleLine="true"
                    android:textColor="#000000"
                    android:visibility="gone"
                    android:textSize="16dp" />

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="6dp"
                    android:background="#f5f5f5" />

                <EditText
                    android:id="@+id/register_password1"
                    android:layout_width="fill_parent"
                    android:layout_height="40dp"
                    android:background="@drawable/signin_text_input_bg"
                    android:gravity="center_vertical|center"
                    android:hint="@string/login_password"
                    android:maxLength="20"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:password="true"
                    android:singleLine="true"
                    android:textColor="#000000"
                    android:textSize="16dp" />

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="6dp"
                    android:background="#f5f5f5" />

                <EditText
                    android:id="@+id/register_password2"
                    android:layout_width="fill_parent"
                    android:layout_height="40dp"
                    android:background="@drawable/signin_text_input_bg"
                    android:gravity="center_vertical|center"
                    android:hint="@string/register_confirm"
                    android:maxLength="20"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:password="true"
                    android:singleLine="true"
                    android:textColor="#000000"
                    android:textSize="16dp" />

                <Button
                    android:id="@+id/regist_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:layout_marginLeft="0dp"
                    android:layout_marginRight="0dp"
                    android:layout_marginTop="30dp"
                    android:background="@drawable/orange_button_bg"
                    android:minWidth="100dp"
                    android:text="立即注册"
                    android:textColor="#ffffff"
                    android:textSize="18dp" />
                <TextView 
                    android:id="@+id/policy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="注册表示已同意《懒豆商城用户服务协议》"
                    android:textSize="12dp"
                    android:textColor="#9acd32"
                    android:layout_marginTop="15dp"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/register_body"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/body_cont"
                android:gravity="center_vertical"
                android:orientation="vertical"
                android:padding="5dp"
                android:visibility="gone" >
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>